# scratch_engine2

./: .gitignore  CMakeLists.txt  README.md  run.sh
engine/: scratch_engine
src/: Animation.cpp  Animation.hpp  Bitmask.cpp  Bitmask.hpp  CAnimation.cpp  CAnimation.hpp  CBoxCollider.cpp  CBoxCollider.hpp  CCamera.cpp  CCamera.hpp  CCollider.cpp  CCollider.hpp  CDirection.cpp  CDirection.hpp  CDrawable.cpp  CDrawable.hpp  CHitbox.cpp  CHitbox.hpp  CInstanceId.cpp  CInstanceId.hpp  CKeyboardAttack.cpp  CKeyboardAttack.hpp  CKeyboardMovement.cpp  CKeyboardMovement.hpp  CMovementAnimation.cpp  CMovementAnimation.hpp  CProjectileAttack.cpp  CProjectileAttack.hpp  CSprite.cpp  CSprite.hpp  CTransform.cpp  CTransform.hpp  CVelocity.cpp  CVelocity.hpp  Character.hpp  Component.hpp  Debug.cpp  Debug.hpp  FrameLoader.cpp  FrameLoader.hpp  (+30 more)
